# cmakeme

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  cmakeme-config.cmake.in  cmakeme_defaults.cmake  cmakeme_doxygen.cmake  cmakeme_install.cmake  cmakeme_pack.cmake  cmakeme_python.cmake  cmakeme_swig.cmake  git_hash-config.cmake  git_hash.bash  git_hash.bash.in  git_hash.cmake  git_hash_target.bash.in  package.xml
cpack/: PKGBUILD.in  cmakeme_pack.cmake  cmakeme_pkgbuild.cmake
doc/: cmakeme_config.rst  cmakeme_python.rst  cmakeme_swig.rst  conf.py  index.rst  modules.rst
sphinx/: cmakeme_sphinx.cmake  conf.py.in  conf_cmake.py.in  conf_python.py.in  index_python.rst.in
sphinx/templates/: layout.html
tests/: CMakeLists.txt  run_tests.cmake  testpy.c  testpy.h  testpy_unittest.py
tests/cmake_python_test/src/: cmakeme_test.py
tests/cmakeme_python_test/: README.md  setup.cfg
tests/include/testpy/: testpy.h
