<package format="2">
  <name>cmakeme</name>
  <version>0.1.0</version>
  <description>
    General CMake Utilities
  </description>
  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>
  <license>MIT</license>
  <url type="repository">https://www.github.com/omnid/cmakeme</url>
  <author email="elwin@u.northwestern.edu">Matthew Elwin></author>
  <build_depend>git</build_depend>
  <test_depend>swig</test_depend>
  <test_depend>python3-sphinx</test_depend>
  <doc_depend>python3-sphinx</doc_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
