[metadata]
name = cmakeme_python_test
version = 0.0.1
author = Matthew Elwin
author_email = elwin@northwestern.edu
description = Test cmakeme integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omnid/cmakememe
project_urls =
    Bug Tracker = https://github.com/omnid/cmakeme/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src